tests/failing/test_try_catch.js
try {
    throw "An error occurred!";
} catch (e) {
    console.log("Caught exception: " + e);
}
